# omoribot3

./: .gitignore  LICENSE  Pipfile  README.md  USAGE.md  main.py  pyproject.toml
omoribot/: __init__.py  __main__.py  badapple.py  containers.py  layout.py  text.py  undertale.py  widgets.py
