[tool.poetry]
name = "omoribot"
version = "0.1.0"
description = "A discord bot for creating OMORI-styled textboxes."
authors = ["darkerbit <mail.darkerbit@gmail.com>"]
license = "ZLIB"

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.2.0"
"discord.py" = "^2.0.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
omoribot = 'omoribot.__main__:main'
